# tie-policies-to-code

./: .gitignore  Cargo.toml  README.md
lambda/: Cargo.toml  lambda_function.py
lambda/src/: api.rs  lambda.rs  main.rs
lambda_macros/: Cargo.toml
lambda_macros/src/: lambda.rs  lib.rs
messaging-app/: Cargo.toml  client.sh  notes.txt  setup_commands.txt
messaging-app/client-scripts/: create-alice-profile.sh  create-user.sh
messaging-app/src/: auth.rs  conversation_handlers.rs  data_model.rs  friendship_handlers.rs  main.rs  profile_handlers.rs  util.rs
policy_macros/: Cargo.toml
policy_macros/aws_iam_info/: condition_operators.txt  global_condition_context_keys.txt
policy_macros/src/: compiler.rs  iam_policy_compiler.rs  lib.rs  parser.rs  policy.rs
src/: main.rs  s3.rs
terraform/: main.tf  main.tf.json  terraform.tfvars  terraform.tfvars.json
test-lambda-fn/: Cargo.toml  README.md
test-lambda-fn/src/: http_handler.rs  main.rs
test-lambda-macros/: .gitignore  Cargo.toml  README.md  deploy.sh
test-lambda-macros/src/: lib.rs
