[package]
name = "lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.6"
aws-sdk-s3 = "1.108.0"
aws-sdk-lambda = "1.100.0"
aws-smithy-runtime-api = "1.9.1"
aws-sdk-apigateway = "1.88.0"
aws-sdk-iam = "1.0"
serde_json = "1.0.145"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "rt"] }
random-string = "1.1.0"
