[package]
name = "messaging-app"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.8"
aws-sdk-dynamodb = "1.96.0"
axum = "0.8.6"
chrono = "0.4.42"
itertools = "0.14.0"
serde = "1.0.228"
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
